--- a/Class-3 (Task Mangement App)/index.html
+++ b/Class-3 (Task Mangement App)/index.html
@@ -30,6 +30,16 @@
 
       <!-- Filters -->
 
+      <div class="toolbox-priority-colors">
+       <span class="filter-label">Filter by Priority</span>
+       <div class="color-filters">
+           <div class="lightpink color"></div>
+           <div class="lightblue color"></div>
+           <div class="lightgreen color"></div>
+           <div class="lightyellow color"></div>
+       </div>
+      </div>
+
       <!-- Buttons -->
     </div>
   </body>
