open and lose modal

--- a/Class-3 (Task Mangement App)/index2.html
+++ b/Class-3 (Task Mangement App)/index2.html
@@ -48,14 +48,14 @@
     <!-- Task Ticket -->
     <div class="main-cont">
         <!-- Dynamic tickets will be added here -->
-         <div class="ticket-cont" >
+         <!-- <div class="ticket-cont" >
          <div class="ticket-color" style="background-color: lightpink;" ></div>
              <div class="ticket-id">12345</div>
              <div  class="task-area">task Test</div>
               <div class="ticket-lock">
                 <i class="fa-solid fa-lock"></i>
               </div>
-              </div>
+              </div> -->
     </div>
 
     <div class="modal-cont">
