Handle Lock and Task editing done

--- a/Class-3 (Task Mangement App)/index2.html
+++ b/Class-3 (Task Mangement App)/index2.html
@@ -51,7 +51,7 @@
     <!-- <div class="ticket-cont" >
          <div class="ticket-color" style="background-color: lightpink;" ></div>
              <div class="ticket-id">12345</div>
-             <div  class="task-area">task Test</div>
+             <div contenteditable="false"  class="task-area">task Test</div>
               <div class="ticket-lock">
                 <i class="fa-solid fa-lock"></i>
         </div>
