--- a/Class-14(Weather App)/index.html
+++ b/Class-14(Weather App)/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Enhnaced Weather App</title>
+    <title>Class Project</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,7 +33,7 @@
         <div class="weather-details">
           <div class="detail-item">
             <span class="label">Feels like</span>
-            <span class="value">24°</span>
+            <span id="feelsLike" class="value">24°</span>
           </div>
           <div class="detail-item">
             <span class="label">Humidity</span>
